# Spy-

./: .env.example  .gitignore  .replit  README.md  pyproject.toml
.github/workflows/: test.yml
app/: _chart.py  _chat_widget.py  _premortem_panel.py  _shared.py  _ui.py  streamlit_app.py
app/kalshi/: __init__.py  client.py  (+6 more)
attached_assets/: Pasted--Filters-ME-Open-task-board-Library-File-tree-Search-Ne_1778697621930.txt  Pasted--Kalshi-Crypto-End-to-End-Slice-Audit-I-tested-the-live_1778700464691.txt  Pasted--Kalshi-Crypto-decision-dashboard-Hybrid-spot-source-pu_1778702944875.txt  Pasted--Show-previous-messages-2-messages-15-actions-Checkpoin_1778707849081.txt  Pasted--Slice-by-slice-assessment-of-your-Live-Signals-app-I-w_1778764641621.txt  Pasted-Standard-caveat-up-front-I-can-describe-what-the-tool-i_1778765124045.txt  Pasted-ValueError-Cannot-losslessly-convert-units-Traceback-Fi_1778694078870.txt
data/: kalshi_observations.jsonl
monte/: config.py
tests/: conftest.py  test_backtest_dip_pump.py  test_backtest_kalshi.py  test_backtest_store.py  test_backtest_triangulation.py  test_chart_vision.py  test_event_aggregator.py  test_fred_and_calendar.py  test_goal_tracker.py  test_horizon_and_journal.py  test_indicators_robustness.py  test_kalshi_client.py  test_kalshi_council.py  test_kalshi_decisions.py  test_kalshi_vision.py  test_learning_bootstrap.py  test_likelihood_gate.py  test_ma_cross.py  test_microstructure.py  test_monte_edge.py  test_paper_book_pnl.py  test_premortem.py  test_regime_engine.py  test_rsi.py  test_sma_cross.py  test_vwap_reversion.py
(+89 files in other folders)
