[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spy-bot"
version = "0.1.0"
description = "Streamlit UI for the Monte signal engine — crypto + SPY paper-trading dashboard"
requires-python = ">=3.10"
authors = [{name = "Spy-"}]
readme = "README.md"
dependencies = [
    "streamlit>=1.32",
    "plotly>=5.20",
    "pandas>=2.1",
    "numpy>=1.26",
    "streamlit-autorefresh>=1.0",
    "yfinance>=0.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "anthropic>=0.101.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
regime = [
    "hmmlearn>=0.3",
]

[tool.setuptools.packages.find]
include = ["app*", "monte*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
